--- a/client/src/index.html
+++ b/client/src/index.html
@@ -7,6 +7,7 @@
 
   <base href="/" />
   <script src="cordova.js"></script>
+  <!-- <script src="https://widget.cloudinary.com/v2.0/global/all.js" type="text/javascript"></script> -->
 
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta name="format-detection" content="telephone=no" />
